# agent-vars

./: .gitignore  PLAN.md  README.md  agent-vars.example.yaml  pyproject.toml
.github/workflows/: publish-python.yml
agent_vars/: SKILL.md  __init__.py  cli.py  contract.py  diagnostics.py  materializer.py  outputs.py  providers.py  registry.py  resolution.py  scanner.py  workflow.py
tests/: test_cli.py  test_contract.py  test_diagnostics.py  test_outputs.py  test_provider_adapters.py  test_registry_lifecycle.py  test_registry_providers_scanner.py  test_resolution_materializer.py  test_scanner_enterprise.py
tests/integration/: test_gcp_secret_manager_real.py  test_provider_cli_emulator.py
