[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-vars"
version = "0.1.0"
description = "Repository environment-configuration control plane CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agent-vars = "agent_vars.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "gcp_integration: requires authenticated gcloud access and explicit GCP project/secret environment variables",
]
