[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-vars"
version = "0.1.0"
description = "Repository environment-configuration control plane CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]
authors = [{ name = "Agent Vars maintainers" }]
keywords = ["configuration", "environment", "secrets", "cli", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
publish = ["build>=1.2", "twine>=5.1"]

[project.scripts]
agent-vars = "agent_vars.cli:main"

[project.urls]
Homepage = "https://github.com/everfaz/agents"
Repository = "https://github.com/everfaz/agents"
Issues = "https://github.com/everfaz/agents/issues"

[tool.setuptools.packages.find]
include = ["agent_vars*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
agent_vars = ["SKILL.md"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
